import "google/protobuf/timestamp.proto";

package submission;
syntax = "proto3";

message StateSubmissionInfo {
    optional string id = 1;
    optional google.protobuf.Timestamp createdAt = 2;
    optional google.protobuf.Timestamp updatedAt = 3;
    optional StateCode stateCode = 4;
    repeated string programId = 5;
    optional string submissionName = 6;
    optional SubmissionType submissionType = 7;
    optional string submissionDescription = 8;
    repeated Contact stateContacts = 9;
    repeated Document documents = 10;

    optional ContractInfo contractInfo = 50;
    repeated RateInfo rateInfo = 51;
}


/// Contract specific sub types
message ContractInfo {
    optional ContractType contractType = 1;
    optional string contractDateStart = 2;
    optional string contractDateEnd = 3;
    repeated ManagedCareEntity managedCareEntities = 4;
    repeated FederalAuthority federalAuthorities = 5;

    optional ContractAmendmentInfo contractAmendmentInfo  = 50;

    /// nested sub types
    enum ContractType {
        UNKNOWN = 0;
        BASE = 1;
        AMENDMENT = 2;
    } 

    enum ManagedCareEntity {
        UNKNOWN = 0;
        MCO = 1;
        PIHP = 2;
        PAHP= 3; 
        PCCM = 4;
    }

    enum FederalAuthority {
        UNKNOWN = 0;
        STATE_PLAN = 1;
        WAIVER_1915B = 2;
        WAIVER_1115 = 3;
        VOLUNTARY = 4;
        BENCHMARK = 5;
        TITLE_XXI = 6;
    }

    message ContractAmendmentInfo  {
        enum AmendedItem {
            UNKNOWN = 0;
            BENEFITS_PROVIDED = 1;
            CAPITATION_RATES = 2;
            ENCOUNTER_DATA = 3;
            ENROLLEE_ACCESS = 4;
            ENROLLMENT_PROCESS = 5;
            FINANCIAL_INCENTIVES = 6;
            GEO_AREA_SERVED = 7;
            GRIEVANCES_AND_APPEALS_SYSTEM = 8;
            LENGTH_OF_CONTRACT_PERIOD = 9;
            NON_RISK_PAYMENT = 10;
            PROGRAM_INTEGRITY =11;
            QUALITY_STANDARDS =12;
            RISK_SHARING_MECHANISM =13;
            OTHER=14;
            }
        
        enum CapitationRateAmendmentReason{
                UNKNOWN = 0;
                ANNUAL = 1;
                MIDYEAR = 2;
                OTHER = 3;
        }
        message CapitationRatesAmendedInfo {
            optional CapitationRateAmendmentReason reason = 1;
            optional string otherReason = 2;
        }
    
        repeated AmendedItem itemsBeingAmended = 1;
        optional string otherItemBeingAmended = 2;
        optional CapitationRatesAmendedInfo capitationRatesAmendedInfo = 3;
        optional bool relatedToCovid19 = 4;
        optional bool relatedToVaccination = 5;
    }
}
/// Rate specific sub types
message RateInfo {
    optional string id = 1;
    optional RateType rateType = 2;
    optional string rateDateStart = 3;
    optional string rateDateEnd = 4;
    optional string rateDateCertified = 5;
    optional ActuaryContact actuaryContacts = 6;
    optional ActuaryCommunicationType actuaryCommunicationPreference = 7;
    optional RateAmendmentInfo rateAmendmentInfo = 50;

    /// nested sub types 
    enum RateType {
        UNKNOWN = 0;
        NEW = 1;
        AMENDMEMT = 2;
    }
    enum ActuaryCommunicationType {
        UNKNOWN = 0;
        OACT_TO_ACTUARY = 1;
        OACT_TO_STATE = 2;
    }

    enum ActuarialFirmType {
        UNKNOWN = 0;
        MERCER = 1;
        MILLIMAN = 2;
        OPTUMAS = 3;
        GUIDEHOUSE = 4;
        DELOITTE = 5;
        STATE_IN_HOUSE = 6;
        OTHER = 7;
    }
   message ActuaryContact {
        optional Contact contact = 1;
        optional ActuarialFirmType actuarialFirmType = 2;
        optional string actuarialFirmOther= 3;
    }

    message RateAmendmentInfo {
        optional string effectiveDateStart = 1;
        optional string effectiveDateEnd = 2;
    }
}

/// Submission specific sub types 
enum SubmissionType {
    UNKNOWN = 0; 
    CONTRACT_ONLY = 1; 
    CONTRACT_AND_RATES = 3;
}

message Contact {
    optional string name = 1;
    optional string titleRole = 2;
    optional string email = 3;
}

/// Generic sub types (potentionally not state submission related and could be used elsewhere in the app)
message Document {
    optional string name = 1;
    optional string s3URL = 2;
}

enum StateCode {
    UNKNOWN = 0;
    AS = 1 ;
    AK = 2;
    AL = 3;
    AR = 4;
    AZ = 5;
    CA = 6;
    CO = 7;
    CT = 8;
    DC = 9;
    DE = 10;
    FL = 11;
    GA = 12;
    HI = 13;
    IA = 14;
    ID = 15;
    IL = 16;
    IN = 17;
    KS = 18;
    LA = 19;
    MA = 20;
    MD = 21;
    ME = 22;
    MI = 23;
    MN = 24;
    MO = 25;
    MS = 26;
    MT = 27;
    NC = 28;
    ND = 29;
    NE = 30;
    NH = 31;
    NJ = 32;
    NM = 33;
    NV = 34;
    NY = 35;
    OH = 36;
    OK = 37;
    OR = 38;
    PA = 39;
    PR = 40;
    RI = 41;
    SC = 42;
    SD = 43;
    TN = 44;
    TX = 45;
    UT = 46;
    VA = 47;
    VT = 48;
    WA = 49;
    WI = 50;
    WV = 51;
    WY= 52;
}
